--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,11 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GamePod"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".ForgotPassword"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".Inscription"
             android:exported="true"
-            android:theme="@style/AccountManageStyle" >
+            android:theme="@style/AccountManageStyle">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -23,14 +30,14 @@
         <activity
             android:name=".Connexion"
             android:exported="true"
-            android:theme="@style/AccountManageStyle" >
+            android:theme="@style/AccountManageStyle">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
