ajout page mes likes et ma wishlist

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.GamePod"
         tools:targetApi="31">
         <activity
+            android:name=".MyWishList"
+            android:exported="false" />
+        <activity
+            android:name=".MyLikes"
+            android:exported="false" />
+        <activity
             android:name=".ForgotPassword"
             android:exported="true">
             <meta-data
