ajout details game vue

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.GamePod"
         tools:targetApi="31">
         <activity
-            android:name=".detailsGame"
+            android:name=".DetailsGame"
             android:exported="false" />
         <activity
             android:name=".MyWishList"
