--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:exported="false" />
         <activity
             android:name=".DetailsGame"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MyWishList"
             android:exported="false" />
