--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,10 @@
             android:exported="true" />
         <activity
             android:name=".MyWishList"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MyLikes"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".ForgotPassword"
             android:exported="true">
