--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:name=".myLikes.MyLikesActivity"
             android:exported="true" />
         <activity
-            android:name=".ForgotPassword"
+            android:name=".forgotPassword.ForgotPasswordActivity"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
