--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:theme="@style/Theme.GamePod"
         tools:targetApi="31">
         <activity
-            android:name=".Search"
-            android:exported="false" />
+            android:name=".search.searchActivity"
+            android:exported="true" />
         <activity
             android:name=".myWishList.MyWishListActivity"
             android:exported="true" />
