--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.GamePod"
         tools:targetApi="31">
         <activity
-            android:name=".search.searchActivity"
+            android:name=".search.SearchActivity"
             android:exported="true" />
         <activity
             android:name=".myWishList.MyWishListActivity"
