--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
