--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,10 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:31.2.0')
+
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
+
 }
