--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,23 +14,23 @@
         tools:targetApi="31">
         <activity
             android:name=".search.SearchActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".myWishList.MyWishListActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".myLikes.MyLikesActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".forgotPassword.ForgotPasswordActivity"
-            android:exported="true">
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".inscription.InscriptionActivity"
-            android:exported="true"
+            android:exported="false"
             android:theme="@style/AccountManageStyle">
             <meta-data
                 android:name="android.app.lib_name"
@@ -59,7 +59,7 @@
         </activity>
         <activity
             android:name=".gameDetails.GameDetailsActivity"
-            android:exported="true">
+            android:exported="false">
         </activity>
     </application>
 
